--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,3 @@
 {
-    "sqltools.connections": [
-        {
-            "pgOptions": {
-                "ssl": {
-                    "rejectUnauthorized": true
-                }
-            },
-            "ssh": "Disabled",
-            "previewLimit": 50,
-            "server": "localhost",
-            "driver": "PostgreSQL",
-            "name": "rendercse340.com",
-            "connectString": "postgresql://cse340motor:KTgUl7mzYH6tzCN26VzAWgV9g9jOSULD@dpg-d4613gc9c44c73cd5e6g-a.oregon-postgres.render.com/cse340motor_5x4v"
-        }
-    ]
+    "sqltools.connections": []
 }
